# react-native-brotli

./: .gitmodules  Brotli.podspec  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  package.json  react-native-brotli-0.1.0.tgz  tsconfig.build.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/brotli/: BrotliEncoder.kt  BrotliInitProvider.kt  BrotliModule.kt  BrotliPackage.kt
cpp/: brotli_jni.cpp
example/: app.json  package.json  react-native.config.js
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/brotli/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/BrotliExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/BrotliExample.xcodeproj/: project.pbxproj
example/ios/BrotliExample.xcodeproj/xcshareddata/xcschemes/: BrotliExample.xcscheme
example/ios/BrotliExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: Brotli.h  Brotli.mm
src/: NativeBrotli.ts  index.tsx
